Restore the ui after crashing in canvasonly mode

BUG:402710